player eat diamond

--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -330,11 +330,15 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\res\demo_map.bmp" />
+    <Image Include="..\res\FIRE_DIAMOND.bmp" />
     <Image Include="..\res\GAME_MENU.bmp" />
     <Image Include="..\res\ICE_DIAMOND.bmp" />
     <Image Include="..\res\ICE_FRONT.bmp" />
+    <Image Include="..\res\ICE_LEFT_RUN_1.bmp" />
     <Image Include="..\res\ICE_LEFT_RUN_11.bmp" />
+    <Image Include="..\res\ICE_LEFT_RUN_2.bmp" />
     <Image Include="..\res\ICE_LEFT_RUN_22.bmp" />
+    <Image Include="..\res\ICE_LEFT_RUN_3.bmp" />
     <Image Include="..\res\ICE_LEFT_RUN_33.bmp" />
     <Image Include="..\res\ICE_RIGHT_RUN_1.bmp" />
     <Image Include="..\res\ICE_RIGHT_RUN_2.bmp" />
