--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -228,5 +228,17 @@
     <Image Include="..\res\ICE_LEFT_RUN_33.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\res\FIRE_DIAMOND.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\ICE_LEFT_RUN_1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\ICE_LEFT_RUN_2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\ICE_LEFT_RUN_3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
