--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -240,5 +240,26 @@
     <Image Include="..\res\ICE_LEFT_RUN_3.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\res\FIRE_FRONT.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\FIRE_LEFT_RUN_1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\FIRE_LEFT_RUN_2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\FIRE_LEFT_RUN_3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\FIRE_RIGHT_RUN_1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\FIRE_RIGHT_RUN_2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\FIRE_RIGHT_RUN_3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
