--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -331,6 +331,13 @@
   <ItemGroup>
     <Image Include="..\res\demo_map.bmp" />
     <Image Include="..\res\FIRE_DIAMOND.bmp" />
+    <Image Include="..\res\FIRE_FRONT.bmp" />
+    <Image Include="..\res\FIRE_LEFT_RUN_1.bmp" />
+    <Image Include="..\res\FIRE_LEFT_RUN_2.bmp" />
+    <Image Include="..\res\FIRE_LEFT_RUN_3.bmp" />
+    <Image Include="..\res\FIRE_RIGHT_RUN_1.bmp" />
+    <Image Include="..\res\FIRE_RIGHT_RUN_2.bmp" />
+    <Image Include="..\res\FIRE_RIGHT_RUN_3.bmp" />
     <Image Include="..\res\GAME_MENU.bmp" />
     <Image Include="..\res\ICE_DIAMOND.bmp" />
     <Image Include="..\res\ICE_FRONT.bmp" />
