--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -258,7 +258,9 @@
     <None Include="res\Toolbar.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Player.cpp" />
+    <ClCompile Include="Source\IcePlayer.cpp" />
+    <ClCompile Include="Source\RedPlayer.cpp" />
+    <ClCompile Include="Source\IceDiamond.cpp" />
     <ClCompile Include="Source\RedDiamond.cpp" />
     <ClCompile Include="Source\audio.cpp" />
     <ClCompile Include="Source\CBall.cpp" />
@@ -306,7 +308,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Player.h" />
+    <ClInclude Include="Source\IcePlayer.h" />
+    <ClInclude Include="Source\RedPlayer.h" />
+    <ClInclude Include="Source\IceDiamond.h" />
     <ClInclude Include="Source\RedDiamond.h" />
     <ClInclude Include="Source\audio.h" />
     <ClInclude Include="Source\CBall.h" />
