--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -258,6 +258,7 @@
     <None Include="res\Toolbar.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\RedLake.cpp" />
     <ClCompile Include="Source\IcePlayer.cpp" />
     <ClCompile Include="Source\RedPlayer.cpp" />
     <ClCompile Include="Source\IceDiamond.cpp" />
@@ -308,6 +309,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\RedLake.h" />
     <ClInclude Include="Source\IcePlayer.h" />
     <ClInclude Include="Source\RedPlayer.h" />
     <ClInclude Include="Source\IceDiamond.h" />
