--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="Source\RedLake.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\RedDoor.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h">
@@ -195,6 +198,9 @@
       <Filter>MyGame</Filter>
     </ClInclude>
     <ClInclude Include="Source\RedLake.h">
+      <Filter>MyGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\RedDoor.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
@@ -277,6 +283,19 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="..\res\FIRE_RIGHT_RUN_3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\DOOR_OPEN.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\FIRE_DOOR_CLOSE.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\ICE_DOOR_CLOSE.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\1.png" />
+    <Image Include="..\res\FIRE_LAKE.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
