--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -338,6 +338,7 @@
     <Image Include="..\res\demo_map.bmp" />
     <Image Include="..\res\FIRE_DIAMOND.bmp" />
     <Image Include="..\res\FIRE_FRONT.bmp" />
+    <Image Include="..\res\FIRE_LAKE.bmp" />
     <Image Include="..\res\FIRE_LEFT_RUN_1.bmp" />
     <Image Include="..\res\FIRE_LEFT_RUN_2.bmp" />
     <Image Include="..\res\FIRE_LEFT_RUN_3.bmp" />
@@ -353,12 +354,16 @@
     <Image Include="..\res\ICE_LEFT_RUN_22.bmp" />
     <Image Include="..\res\ICE_LEFT_RUN_3.bmp" />
     <Image Include="..\res\ICE_LEFT_RUN_33.bmp" />
+    <Image Include="..\res\ICE_RAKE.bmp" />
     <Image Include="..\res\ICE_RIGHT_RUN_1.bmp" />
     <Image Include="..\res\ICE_RIGHT_RUN_2.bmp" />
     <Image Include="..\res\ICE_RIGHT_RUN_3.bmp" />
+    <Image Include="..\res\RED_LAKE.png" />
+    <Image Include="Image.bmp" />
     <Image Include="res\bitmap3.bmp" />
     <Image Include="res\bitmap4.bmp" />
     <Image Include="res\bitmap5.bmp" />
+    <Image Include="res\bitmap7.bmp" />
     <Image Include="res\bmp00001.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
