--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -141,10 +141,10 @@
     <ClCompile Include="Source\IcePlayer.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
-    <ClCompile Include="Source\RedLake.cpp">
+    <ClCompile Include="Source\RedDoor.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
-    <ClCompile Include="Source\RedDoor.cpp">
+    <ClCompile Include="Source\RedLake.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
   </ItemGroup>
@@ -197,10 +197,10 @@
     <ClInclude Include="Source\IcePlayer.h">
       <Filter>MyGame</Filter>
     </ClInclude>
-    <ClInclude Include="Source\RedLake.h">
+    <ClInclude Include="Source\RedDoor.h">
       <Filter>MyGame</Filter>
     </ClInclude>
-    <ClInclude Include="Source\RedDoor.h">
+    <ClInclude Include="Source\RedLake.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
@@ -305,6 +305,10 @@
     </Image>
     <Image Include="..\res\1.png" />
     <Image Include="..\res\FIRE_LAKE.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\RED_LAKE.png" />
+    <Image Include="res\bitmap7.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
