--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -258,6 +258,7 @@
     <None Include="res\Toolbar.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\IceLake.cpp" />
     <ClCompile Include="Source\RedLake.cpp" />
     <ClCompile Include="Source\RedDoor.cpp" />
     <ClCompile Include="Source\IcePlayer.cpp" />
@@ -310,6 +311,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\IceLake.h" />
     <ClInclude Include="Source\RedLake.h" />
     <ClInclude Include="Source\RedDoor.h" />
     <ClInclude Include="Source\IcePlayer.h" />
