--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="Source\IceLake.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\IceDoor.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h">
@@ -207,6 +210,9 @@
       <Filter>MyGame</Filter>
     </ClInclude>
     <ClInclude Include="Source\IceLake.h">
+      <Filter>MyGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\IceDoor.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
