--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -258,6 +258,7 @@
     <None Include="res\Toolbar.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Mood.cpp" />
     <ClCompile Include="Source\box.cpp" />
     <ClCompile Include="Source\IceDoor.cpp" />
     <ClCompile Include="Source\IceLake.cpp" />
@@ -313,6 +314,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Mood.h" />
     <ClInclude Include="Source\box.h" />
     <ClInclude Include="Source\IceDoor.h" />
     <ClInclude Include="Source\IceLake.h" />
@@ -344,6 +346,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\res\1.png" />
+    <Image Include="..\res\bitmap7.bmp" />
     <Image Include="..\res\box.bmp" />
     <Image Include="..\res\demo_map.bmp" />
     <Image Include="..\res\DOOR_OPEN.bmp" />
@@ -372,7 +375,10 @@
     <Image Include="..\res\ICE_RIGHT_RUN_1.bmp" />
     <Image Include="..\res\ICE_RIGHT_RUN_2.bmp" />
     <Image Include="..\res\ICE_RIGHT_RUN_3.bmp" />
+    <Image Include="..\res\leftmood.bmp" />
+    <Image Include="..\res\midmood.bmp" />
     <Image Include="..\res\RED_LAKE.png" />
+    <Image Include="..\res\rightmood.bmp" />
     <Image Include="Image.bmp" />
     <Image Include="res\bitmap3.bmp" />
     <Image Include="res\bitmap4.bmp" />
