--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -352,5 +352,8 @@
     <Image Include="..\res\leftmood.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\res\mood1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
