--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="Source\Mood.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Button.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h">
@@ -225,6 +228,9 @@
       <Filter>MyGame</Filter>
     </ClInclude>
     <ClInclude Include="Source\Mood.h">
+      <Filter>MyGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Button.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
@@ -353,6 +359,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="..\res\mood1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\BUTTON.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
