--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="Source\Button.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Greenlake.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h">
@@ -231,6 +234,9 @@
       <Filter>MyGame</Filter>
     </ClInclude>
     <ClInclude Include="Source\Button.h">
+      <Filter>MyGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Greenlake.h">
       <Filter>MyGame</Filter>
     </ClInclude>
   </ItemGroup>
@@ -362,6 +368,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="..\res\BUTTON.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\GREEN_RAKE.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
