--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -373,5 +373,32 @@
     <Image Include="..\res\GREEN_RAKE.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\res\WIN.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\BOYGIRL.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\DIM.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\time.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\NEXT.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\GOLD.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\bad.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\GOOD.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\res\CONTINUE.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
