--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -409,5 +409,8 @@
     <Image Include="..\res\menu.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\res\mood2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
