--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -396,6 +396,7 @@
     <Image Include="..\res\midmood.bmp" />
     <Image Include="..\res\mood1.bmp" />
     <Image Include="..\res\mood2.bmp" />
+    <Image Include="..\res\mood3.bmp" />
     <Image Include="..\res\NEXT.bmp" />
     <Image Include="..\res\rightmood.bmp" />
     <Image Include="..\res\time.bmp" />
