--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -412,5 +412,8 @@
     <Image Include="..\res\mood2.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\res\mood3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
